[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/ChatBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/VillagerTest.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.509804, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.156863, 0.0235294, 0.0235294, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="VillagerTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" parent="." instance=ExtResource( 1 )]

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NewInteraction" type="Button" parent="Buttons"]
margin_right = 114.0
margin_bottom = 20.0
text = "New Interaction"

[node name="AdvanceConvo" type="Button" parent="Buttons"]
margin_top = 40.0
margin_right = 114.0
margin_bottom = 60.0
disabled = true
text = "Advance Convo"

[node name="DismissEject" type="Button" parent="Buttons"]
margin_top = 80.0
margin_right = 114.0
margin_bottom = 100.0
disabled = true
text = "Dismiss / Eject"

[node name="States" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 424.0
margin_top = 66.0
margin_right = 538.0
margin_bottom = -306.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="begin" type="Label" parent="States"]
margin_right = 114.0
margin_bottom = 14.0
text = "Begin"

[node name="ask" type="Label" parent="States"]
margin_top = 34.0
margin_right = 114.0
margin_bottom = 48.0
text = "Ask"

[node name="fetch" type="Label" parent="States"]
margin_top = 68.0
margin_right = 114.0
margin_bottom = 82.0
text = "Fetch"

[node name="charge" type="Label" parent="States"]
margin_top = 102.0
margin_right = 114.0
margin_bottom = 116.0
text = "Charge"

[node name="deliver" type="Label" parent="States"]
margin_top = 136.0
margin_right = 114.0
margin_bottom = 150.0
text = "Deliver"

[node name="dismiss" type="Label" parent="States"]
margin_top = 170.0
margin_right = 114.0
margin_bottom = 184.0
text = "Dismiss"

[node name="end" type="Label" parent="States"]
margin_top = 204.0
margin_right = 114.0
margin_bottom = 218.0
text = "End"

[node name="Panel" type="Panel" parent="."]
margin_left = 396.0
margin_top = 64.0
margin_right = 416.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 1 )

[node name="Control" type="HBoxContainer" parent="."]
margin_left = 136.613
margin_top = -0.917343
margin_right = 384.613
margin_bottom = 39.0827
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_top = 13.0
margin_right = 170.0
margin_bottom = 27.0
text = "% Chance of stock phrases"

[node name="SpinBox" type="SpinBox" parent="Control"]
margin_left = 174.0
margin_right = 248.0
margin_bottom = 40.0
step = 5.0
value = 30.0
suffix = "%"

[connection signal="pressed" from="Buttons/NewInteraction" to="." method="_on_NewInteraction_pressed"]
[connection signal="pressed" from="Buttons/AdvanceConvo" to="." method="_on_AdvanceConvo_pressed"]
[connection signal="pressed" from="Buttons/DismissEject" to="." method="_on_DismissEject_pressed"]
[connection signal="value_changed" from="Control/SpinBox" to="." method="_on_SpinBox_value_changed"]
